--- a/languages/pl.json
+++ b/languages/pl.json
@@ -1,5 +1,5 @@
 {
-
+"index-title":"Willa Owce Dwie - Twój wymarzony pobyt zaczyna się tutaj",
 
     "nav-link--1":"O nas",
     "nav-link--2":"Pokoje",
@@ -9,9 +9,21 @@
     "nav-link--3":"Atrakcje",
     "nav-link--4":"Galeria",
     "nav-link--5":"Kontakt",
+
     "title":"Willa",
     "subtitle-1":"Twój wymarzony pobyt",
-    "subtitle-2":" zaczyna się tutaj"
+    "subtitle-2":" zaczyna się tutaj",
+
+    "index-rooms--title":"Pokoje",
+    "index-rooms":"W naszym obiekcie znajdziesz 12 przytulnych pokoi z osobnymi łazienkami, zapewniających wyjątkowy komfort podczas pobytu. Położenie naszego miejsca sprawia, że stanowi doskonałą bazę wypadową do górskich przygód. Profesjonalny personel jest gotowy zadbać o każdy detal Twojego pobytu, zapewniając niezapomniane doświadczenie.",
+    "person":"os.",
+    "watch":"zobacz",
+    "icon-1":"Darmowe Wi-Fi",
+    "icon-2":"Śniadanie w formie bufetu",
+    "icon-3":"Darmowy parking",
+    "icon-4":"Sauna fińska",
+    "icon-5":"Sauna infared"
+    
 
 
 
