add more translate

--- a/languages/en.json
+++ b/languages/en.json
@@ -2,6 +2,7 @@
   "index-title":"Holidays of your dreams start here – discover pleasure in every detail",
   "index-about-title":"About us | Villa Owce Dwa - Your dream stay starts here",
   "index-rooms-title":"Our Rooms | Villa Owce Dwa - Your dream stay starts here",
+  "index-gallery-title":"Villa Owce Dwie - Your dream stay starts here",
 
 
   "nav-link--1":"About",
@@ -61,7 +62,23 @@
 "rooms-title":"Rooms",
 "rooms-desc":"It is equipped with a double bed, a sofa bed, a wardrobe, a desk, a TV, a safe and a bathroom with a shower.",
 "rooms-desc-2":"It is equipped with a double bed, wardrobe, desk, TV, safe and bathroom with shower.",
-"check":"Check"
+"check":"Check",
+
+
+
+"gallery-title":"Gallery",
+"gallery-item-1":"Family deluxe",
+"gallery-item-2":"Family Premiere",
+"gallery-item-3":"Double room",
+
+
+
+
+"cookie-bar":"This website uses cookies to ensure you get the best experience on our website platforms. By continuing to browse our website, you consent to our use of cookies."
+
+
+
+
 
   }
   
