--- a/languages/pl.json
+++ b/languages/pl.json
@@ -2,6 +2,7 @@
 "index-title":"Willa Owce Dwie - Twój wymarzony pobyt zaczyna się tutaj",
 "index-about-title":"O nas | Willa Owce Dwie - Twój wymarzony pobyt zaczyna się tutaj",
 "index-rooms-title":"Nasze Pokoje | Willa Owce Dwie - Twój wymarzony pobyt zaczyna się tutaj",
+"index-gallery-title":"Willa Owce Dwie - Twój wymarzony pobyt zaczyna się tutaj",
 
 
     "nav-link--1":"O nas",
@@ -62,8 +63,17 @@
 "rooms-title":"Pokoje",
 "rooms-desc":"Wyposażony jest w dwuosobowe łóżko, rozkładaną sofę, szafę, biurko, tv, sejf i łazienkę z prysznicem.",
 "rooms-desc-2":"Wyposażony jest w dwuosobowe łóżko, szafę, biurko, tv, sejf i łazienkę z prysznicem.",
-"check":"zobacz"
+"check":"zobacz",
 
+
+
+"gallery-title":"Galeria",
+"gallery-item-1":"Rodzinny Deluxe",
+"gallery-item-2":"Rodzinny Premiere",
+"gallery-item-3":"Dwuosobowy",
+
+
+"cookie-bar":"Ta witryna używa plików cookie, aby zapewnić Ci najlepsze doświadczenie podczas korzystania z naszej platformy. Kontynuując przeglądanie naszej witryny, wyrażasz zgodę na korzystanie z plików cookie."
 
   }
   
