--- a/languages/pl.json
+++ b/languages/pl.json
@@ -1,8 +1,13 @@
 {
+"lang":"pl",
+
 "index-title":"Willa Owce Dwie - Twój wymarzony pobyt zaczyna się tutaj",
 "index-about-title":"O nas | Willa Owce Dwie - Twój wymarzony pobyt zaczyna się tutaj",
 "index-rooms-title":"Nasze Pokoje | Willa Owce Dwie - Twój wymarzony pobyt zaczyna się tutaj",
 "index-gallery-title":"Willa Owce Dwie - Twój wymarzony pobyt zaczyna się tutaj",
+"index-room1-title":"Pokój Rodzinny Typu Deluxe z Balkonem | Willa Owce Dwie - Twój wymarzony pobyt zaczyna się tutaj",
+"index-room2-title":"Pokój Rodzinny Typu Premiere z Balkonem | Willa Owce Dwie - Twój wymarzony pobyt zaczyna się tutaj",
+"index-room3-title":"Dwuosobowy Pokój Typu Deluxe z Balkonem | Willa Owce Dwie - Twój wymarzony pobyt zaczyna się tutaj",
 
 
     "nav-link--1":"O nas",
@@ -64,6 +69,31 @@
 "rooms-desc":"Wyposażony jest w dwuosobowe łóżko, rozkładaną sofę, szafę, biurko, tv, sejf i łazienkę z prysznicem.",
 "rooms-desc-2":"Wyposażony jest w dwuosobowe łóżko, szafę, biurko, tv, sejf i łazienkę z prysznicem.",
 "check":"zobacz",
+
+
+"numberOfGuests":"Liczba gości",
+"bed":"Łóżko",
+"double":"Podwójne",
+"sofa":"Sofa",
+"foldable":"Rozkładana",
+"amenities":"Udogodnienia",
+"safeBox":"Sejf",
+"bathroomWithShower":"Łazienka z Prysznicem",
+"cupboard":"Szafa",
+"desk":"Biurko",
+"towels":"Ręczniki",
+"flootCovering":"Wykładzina",
+"cosmeticKit":"Zestaw Kosmetyków",
+"coffeeAndTea":"Kawa i Herbata",
+"refrigerator":"Lodówka",
+"otherRooms":"Pozostałe Pokoje",
+
+
+
+
+
+
+
 
 
 
