--- a/languages/en.json
+++ b/languages/en.json
@@ -8,6 +8,8 @@
   "index-room1-title":"Deluxe Family Room with Balcony | Villa Owce Dwie - Your dreamstay starts here",
   "index-room2-title":"Premiere Family Room with Balcony | Villa Owce Dwie - Your dreamstay starts here",
   "index-room3-title":"Double Deluxe Room with Balcony | Villa Owce Dwie - Your dreamstay starts here",
+  "index-attractions-title":"Holidays of your dreams start here – discover pleasure in every detail",
+  "index-contact-title":"Holidays of your dreams start here – discover pleasure in every detail",
 
 
   "nav-link--1":"About",
@@ -87,6 +89,17 @@
 "refrigerator":"Refrigerator",
 "otherRooms":"Other Rooms",
 
+"attractions":"Attractions",
+"attractions-title":"Get to know the most interesting local attractions",
+"krokiew-1":"Wielka Krokiew ski jump. Wielka Krokiew is one of the most characteristic attractions in Zakopane, well known both to winter sports lovers and tourists from all over the world. It has gained its fame thanks to its  architecture and as a site of prestigious skiing competitions. ",
+"krokiew-2":"The ski jump was built in 1925 and has been rebuilt and modernised many times since to meet the most demanding modern standards and requirements. Its impressive structure and views it offers make it an unforgettable part of Zakopane landscape. ",
+"krokiew-3":"Wielka Krokiew has a K-20 construction point which means that the distance between starting and landing points is 120 metres. The ski jump has the most modern amenities to ensure the best conditions for both skiers and the  audience.",
+"kasprowy-1":"Kasprowy Wierch is one of the highest peaks of the Western Tatras. It is located on the Polish-Slovak border and offers  spectacular views to the both sides. The mountain is accessible on foot and by cable car from Kuźnice. ",
+"kasprowy-2":"Kasprowy Wierch with its altitude of 1987 metres above sea level offers panoramic views of the Western and High Tatras as well as the Slovak part of the Tatra Mountains and the Low Tatras. The cable car on Kasprowy Mount is one of the oldest and most popular gondola lifts in Poland. ",
+"kasprowy-3":"The mountain attracts both tourists and winter sports lovers. There are three pistes on the mountain for skiing and snowboarding. The mountain trails in the region of the mountain are popular among walkers and climbers.    ",
+"kuznice-1":"There were iron works in Kuźnice, former Hamry, until 1978. Iron ore was obtained mainly from Kopa Magury in the nearby Jaworzynka Valley. The owners of Kuźnice, the Homolacs, had a mansion built there where they received artists, scientists and politicians. Currently Kuźnice is well known mostly for its Kasprowy Wierch cable car station. ",
+"kuznice-2":"Apart from the station there are restaurants, shops and the Tatra Mountains National Park headquarters and hut. In 2006 – 2008 the former mansion was renovated with a garner and coachhouse turned into museum exhibitions and park alleys with their illumination and fountain restored.",
+
 
 
 "gallery-title":"Gallery",
@@ -95,13 +108,14 @@
 "gallery-item-3":"Double room",
 
 
-
+"phone":"Phone",
+"seeOnMap":"See on map",
+"contact-1":"Do you have any questions?",
+"contact-2":"We will be happy to answer them!",
+"name":"Name",
+"message":"Message",
+"submit":"Submit",
 
 "cookie-bar":"This website uses cookies to ensure you get the best experience on our website platforms. By continuing to browse our website, you consent to our use of cookies."
-
-
-
-
-
-  }
+}
   
