--- a/languages/pl.json
+++ b/languages/pl.json
@@ -8,6 +8,8 @@
 "index-room1-title":"Pokój Rodzinny Typu Deluxe z Balkonem | Willa Owce Dwie - Twój wymarzony pobyt zaczyna się tutaj",
 "index-room2-title":"Pokój Rodzinny Typu Premiere z Balkonem | Willa Owce Dwie - Twój wymarzony pobyt zaczyna się tutaj",
 "index-room3-title":"Dwuosobowy Pokój Typu Deluxe z Balkonem | Willa Owce Dwie - Twój wymarzony pobyt zaczyna się tutaj",
+"index-attractions-title":"Willa Owce Dwie - Twój wymarzony pobyt zaczyna się tutaj",
+"index-contact-title":"Willa Owce Dwie - Twój wymarzony pobyt zaczyna się tutaj",
 
 
     "nav-link--1":"O nas",
@@ -89,18 +91,32 @@
 "otherRooms":"Pozostałe Pokoje",
 
 
-
-
-
-
-
-
+"attractions":"Atrakcje",
+"attractions-title":"Poznaj najciekawsze okoliczne atrakcje",
+"krokiew-1":"Wielka Krokiew to jedna z najbardziej charakterystycznych atrakcji w Zakopanem, znana zarówno miłośnikom sportów zimowych, jak i turystom z całego świata. Jest to skocznia narciarska, która zyskała sławę nie tylko ze względu na swoją architekturę, ale także jako miejsce prestiżowych zawodów i widowiskowych skoków narciarskich.",
+"krokiew-2":"Skocznia została wybudowana w 1925 roku i od tamtej pory wielokrotnie modernizowana, by sprostać najnowszym standardom i wymaganiom. Jej imponująca konstrukcja oraz widok na otaczające Tatry sprawiają, że stanowi ona niezapomniany element krajobrazu Zakopanego.",
+"krokiew-3":"Wielka Krokiew ma punkt konstrukcyjny K-120, co oznacza, że odległość między punktem startowym a punktem lądowania wynosi 120 metrów. Skocznia jest także wyposażona w najnowocześniejsze udogodnienia, zapewniające bezpieczeństwo i komfort dla skoczków oraz widzów.",
+"kasprowy-1":"Kasprowy Wierch to jeden z najwyższych szczytów Tatr Zachodnich. Znajduje się na granicy polsko-słowackiej i oferuje imponujące widoki na obie strony. Szczyt jest dostępny zarówno pieszo, korzystając z szlaków górskich, jak i za pomocą kolei linowej z Kuźnic.",
+"kasprowy-2":"Z wysokości 1 987 metrów n.p.m. Kasprowy Wierch zapewnia panoramiczną perspektywę na Tatry Zachodnie i Wysokie. Widoki obejmują także słowackie Tatry i Niskie Tatry. Kolej linowa na Kasprowy Wierch jest jedną z najstarszych w Polsce i cieszy się dużą popularnością.",
+"kasprowy-3":"Szczyt jest atrakcyjny nie tylko dla turystów, ale także dla miłośników sportów zimowych. Na stokach Kasprowego Wierchu znajdują się trasy narciarskie, przyciągając narciarzy i snowboardzistów. Szlaki turystyczne wiodące na Kasprowy Wierch są popularne wśród wędrowców, oferując różnorodne trasy, zarówno dla doświadczonych taterników, jak i osób preferujących łagodniejsze podejścia.",
+"kuznice-1":"Kuźnice, a dawniej Hamry, to miejsce gdzie do 1878 r. działały huty żelaza i kuźnie. Rudę żelazną wydobywano głównie pod Kopą Magury w Dolinie Jaworzynki. Właściciele Kuźnic, rodzina Homolacsów, wybudowali tutaj dwór, w którym podejmowali naukowców, artystów, polityków. Obecnie Kuźnice znane są przede wszystkim z dolnej stacji kolejki na Kasprowy Wierch. ",
+"kuznice-2":"Oprócz stacji znajduje się tu m.in. zajazd, restauracja, sklep spożywczy i pamiątkowy oraz leśniczówka TPN. W latach 2006-2008 przeprowadzono renowację dworu. Spichlerz adaptowano na salę wystaw czasowych, w wozowni urządzono muzeum historii Kuźnic, przeprowadzono odbudowę fundamentów dworu Homolacsów, renowację dworków oficjalistów z XIX w., odrestaurowano parkowe ciągi komunikacyjne i alejki wraz z oświetleniem oraz fontannę.",
 
 
 "gallery-title":"Galeria",
 "gallery-item-1":"Rodzinny Deluxe",
 "gallery-item-2":"Rodzinny Premiere",
 "gallery-item-3":"Dwuosobowy",
+
+
+"phone":"Telefon",
+"seeOnMap":"Zobacz na mapie",
+"contact-1":"Masz jakieś pytania?",
+"contact-2":"Chętnie na nie odpowiemy!",
+"name":"Imię",
+"message":"Wiadomość",
+"submit":"Wyślij",
+
 
 
 "cookie-bar":"Ta witryna używa plików cookie, aby zapewnić Ci najlepsze doświadczenie podczas korzystania z naszej platformy. Kontynuując przeglądanie naszej witryny, wyrażasz zgodę na korzystanie z plików cookie."
